errors en mob menu+paddingi

--- a/css/styles.css
+++ b/css/styles.css
@@ -33,7 +33,7 @@ a {
     font-size: 12px;
     line-height: 1.33333;
     letter-spacing: 0.04em;
-    text-decoration: underline;
+    text-decoration: none;
     text-decoration-skip-ink: none;
     color: #4d5ae5;
 }
@@ -237,7 +237,8 @@ button {
     }
 }
 
-/* mobile-menu */
+/* MOBILE MENU */
+
 .mobile-menu {
     position: fixed;
     top: 0;
@@ -245,59 +246,26 @@ button {
     width: 100%;
     height: 100%;
     background-color: #fff;
+    z-index: 999;
     opacity: 0;
     visibility: hidden;
     pointer-events: none;
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    visibility: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mobile-menu.is-open {
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
 }
 
 .mobile-menu-container {
     position: relative;
-    padding-top: 72px;
-    padding-bottom: 40px;
+    padding: 72px 16px 40px 16px;
     display: flex;
     flex-direction: column;
     height: 100%;
 }
-
-.mobile-menu-nav {
-    margin-bottom: auto;
-}
-
-.mobile-list {}
-
-.mobile-link-address {
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 1.2;
-    letter-spacing: 0.02em;
-    color: #434455;
-}
-
-.nav-link-mobile {
-    display: inline;
-    gap: 40px;
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.11111;
-    letter-spacing: 0.02em;
-    color: #2e2f42;
-
-}
-
-.nav-link-mobile.active {
-    color: #404bbf;
-}
-
-
-.nav-link-mobile:hover,
-.nav-link-mobile:focus,
-.mobile-link-address:hover,
-.mobile-link-address:focus {
-    color: #404bbf;
-}
-
 
 .mobile-menu-close {
     position: absolute;
@@ -316,11 +284,109 @@ button {
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.mobile-menu-close:hover,
+.mobile-menu-close:focus {
+    background-color: #404bbf;
+    border: none;
+}
 
-.mobile-menu.is-open {
-    opacity: 1;
-    visibility: visible;
-    pointer-events: auto;
+.mobile-menu-close:hover .icon-close,
+.mobile-menu-close:focus .icon-close {
+    fill: #ffffff;
+}
+
+.icon-close {
+    width: 8px;
+    height: 8px;
+    fill: #2e2f42;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mobile-menu-nav {
+    margin-bottom: auto;
+}
+
+.mobile-list {
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+}
+
+.nav-link-mobile {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+    text-decoration: none;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.nav-link-mobile.active {
+    color: #404bbf;
+}
+
+.nav-link-mobile:hover,
+.nav-link-mobile:focus {
+    color: #404bbf;
+}
+
+.mobile-menu-container address {
+    font-style: normal;
+    margin-bottom: 48px;
+}
+
+.mobile-menu-container address ul {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+}
+
+.mobile-link-address {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #434455;
+    text-decoration: none;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mobile-link-address:hover,
+.mobile-link-address:focus {
+    color: #404bbf;
+}
+
+.mobile-menu-container > ul {
+    display: flex;
+    gap: 40px;
+    justify-content: flex-start;
+}
+
+.team-social-item {
+    width: 40px;
+    height: 40px;
+}
+
+.team-link-social {
+    width: 100%;
+    height: 100%;
+    background-color: #4d5ae5;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.team-link-social:hover,
+.team-link-social:focus {
+    background-color: #404bbf;
+}
+
+.team-link-social .icon-social {
+    fill: #f4f4fd;
 }
 
 
@@ -330,14 +396,13 @@ button {
     }
 }
 
-/* <!-- Principal part --> */
+/*  Principal part */
 
 /* MOBILE */
 
 .section {
     background: #2e2f42;
-    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
-        url("../images/Dark-bgX2.jpg");
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url("../images/Dark-bgX1.jpg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -346,6 +411,14 @@ button {
     min-height: 432px;
     min-width: 320px;
     margin: 0;
+}
+
+/* mobile2x*/
+@media (max-width: 767px) and (-webkit-min-device-pixel-ratio: 2),
+       (max-width: 767px) and (min-resolution: 192dpi) {
+  .section {
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url("../images/Dark-bgX2.jpg");
+  }
 }
 
 .section-title {
@@ -389,11 +462,15 @@ button {
 @media screen and (min-width: 768px) {
     .section {
         padding: 112px 0;
-        min-width: 768px;
-        height: 436px;
-        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url("../images/Darktablet2x.jpg");
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url("../images/Dark-bgtab.jpg");
     }
 
+    @media (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2),
+       (min-width: 768px) and (min-resolution: 192dpi) {
+  .section {
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url("../images/Darktablet2x.jpg");
+  }
+}
     .section-title {
         font-size: 56px;
         line-height: 1.07;
@@ -408,9 +485,16 @@ button {
 @media screen and (min-width: 1158px) {
     .section {
         padding: 188px 0;
-        padding-bottom: 292px;
-        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url("../images/people-office.jpg");
+        /* padding-bottom: 292px; */
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url("../images/people-office1х.jpg");
     }
+
+    @media (min-width: 1024px) and (-webkit-min-device-pixel-ratio: 2),
+       (min-width: 1024px) and (min-resolution: 192dpi) {
+  .section {
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url("../images/people-office2х.jpg");
+  }
+}
 
     .section-title {
         margin-bottom: 48px;
@@ -541,13 +625,17 @@ button {
     margin-bottom: 72px;
 }
 
+.team-cart {
+    padding: 32px 0;
+}
+
 .team-list {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     gap: 72px;
-    padding-bottom: 96px;
+    /* padding-bottom: 96px; */
 }
 
 .team-item {
@@ -580,8 +668,6 @@ button {
 .team-social-list {
     display: flex;
     justify-content: center;
-    padding-top: 8px;
-    padding-bottom: 32px;
     gap: 24px;
 }
 
@@ -608,6 +694,7 @@ button {
 
 .icon-social {
     fill: #f4f4fd;
+    width: 24px;
 }
 
 
@@ -616,7 +703,7 @@ button {
         flex-direction: row;
         flex-wrap: wrap;
         gap: 64px 24px;
-        padding-bottom: 96px;
+        /* padding-bottom: 96px; */
     }
 }
 
@@ -635,13 +722,6 @@ button {
         flex-basis: calc((100% - 72px) / 4);
     }
 
-    .team-cart {
-        padding: 32px 0;
-    }
-
-    .team-list {
-        padding-bottom: 120px;
-    }
 }
 
 /* Our portfolio */
@@ -670,7 +750,7 @@ button {
     gap: 48px;
 }
 
-.portfolio-item:hover {
+.portfolio-item {
     transform: translateY(0%);
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
         0px 1px 1px rgba(46, 47, 66, 0.16),
@@ -735,12 +815,11 @@ button {
         flex-direction: row;
         flex-wrap: wrap;
         gap: 72px 24px;
-        padding-bottom: 96px;
+        /* padding-bottom: 96px; */
     }
 
     .portfolio-item {
         width: calc((100% - 48px) / 2);
-        transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
 }
 
@@ -756,8 +835,14 @@ button {
 
     .portfolio-item {
         width: calc((100% - 48px) / 3);
-        transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
+
+    .portfolio-item:hover {
+    transform: translateY(0%);
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+        0px 1px 1px rgba(46, 47, 66, 0.16),
+        0px 2px 1px rgba(46, 47, 66, 0.08);
+}
 }
 
 /* FOOTER */
