--- a/css/styles.css
+++ b/css/styles.css
@@ -835,6 +835,7 @@ button {
 
     .portfolio-item {
         width: calc((100% - 48px) / 3);
+        box-shadow: none;
     }
 
     .portfolio-item:hover {
